--- a/config.qa.json
+++ b/config.qa.json
@@ -1,7 +1,7 @@
 {
     "HostInfo":{
         "KubernetesHost":"",
-        "HostUsername":"",
+        "HostUsername":"root",
         "HostPassword":""
     }
 }
